# transformer-bistro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: __main__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: generate.py  health.py  history.py  tokenize.py
app/core/: errors.py  logging.py
app/db/: models.py  repository.py  session.py
app/schemas/: common.py  generate.py  tokenize.py
app/services/: history_service.py  model_service.py
docker/: api.Dockerfile  frontend.Dockerfile
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: DecodePanel.tsx  EncodePanel.tsx  GeneratePanel.tsx  HistoryPanel.tsx
frontend/src/components/ui/: SparklesCore.tsx
tests/: conftest.py
tests/integration/: test_decode.py  test_encode.py  test_generate.py  test_health.py  test_history.py
tests/unit/: test_coverage_boost.py  test_errors.py  test_internals.py  test_model_service.py  test_repository.py  test_schemas.py
