[project]
name = "transformer-bistro"
version = "0.1.0"
description = "REST API service for serving a small open-source LLM"
authors = [{ name = "Semion", email = "0senja0@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "transformers>=4.47.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[tool.poetry]
name = "transformer-bistro"
version = "0.1.0"
description = "REST API service for serving a small open-source LLM"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
transformers = ">=4.47.0"
torch = { version = ">=2.5.0", source = "pytorch-cpu" }
pydantic = ">=2.10.0"
pydantic-settings = ">=2.7.0"
sqlalchemy = { version = ">=2.0.36", extras = ["asyncio"] }
asyncpg = ">=0.30.0"
alembic = ">=1.14.0"
accelerate = ">=1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.0.0"
httpx = ">=0.28.0"
ruff = ">=0.8.0"
mypy = ">=1.13.0"
pre-commit = ">=4.0.0"
types-requests = ">=2.32.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/", "frontend/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (requires model download)",
]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
